# kessler-game

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  file.py  kesslergame-2.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  scenario_test.py  scott_dick_controller.py  setup.cfg  setup.py  setup_mypyc.py  test_controller.py
.github/workflows/: create-github-release-and-publish-to-pypi.yml  publish-to-pypi.yml
docs/: API_Documentation.md  Game_Documentation.md  Settings_Documentation.md
examples/: example_controller_fuzzy.py  example_fitness_function.py  example_fuzzy_controller.py  example_fuzzy_load_trained_script.py  example_fuzzy_training_script.py  example_scenarios.py  explanation_client.py  explanation_process.py  explanation_server.py  explanation_testing.py  graphics_both.py  human_scenario_test.py  original_timings.csv  run_game_explanation.py  scenario_test.py  scenario_test_fuzzy.py  scenario_test_multi.py  scenario_timing_test_nographics.py  scott_dick_controller.py  test_controller.py  test_controller2.py  test_controller_fuzzy.py
examples/src/kesslergame/: controller.py  kessler_game.py  scenario.py  team.py
examples/src/kesslergame/graphics/: graphics_base.py  graphics_handler.py
kessler_graphics/: .gitignore  kessler_graphics.uproject
kessler_graphics/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
kessler_graphics/Content/KesslerGame/Blueprints/: BP_CameraOrb.uasset  BP_GameAnimator.uasset  BP_KesslerController.uasset  BP_KesslerGameMode.uasset  BP_KesslerObjStruct.uasset  BP_ScoreStruct.uasset  BP_Ship.uasset
kessler_graphics/Content/KesslerGame/Maps/: KesslerMap.umap  TopDownMap.umap
kessler_graphics/Source/: kessler_graphics.Target.cs  kessler_graphicsEditor.Target.cs
kessler_graphics/Source/kessler_graphics/: kessler_graphics.Build.cs  kessler_graphics.cpp
src/: asteroid.py  collisions.py  controller.py  kessler_game.py  team.py
src/graphics/: __init__.py  graphics_tk.py  graphics_ue.py
src/kessler_game/: __init__.py  asteroid.py  bullet.py  controller.py  kessler_game.py  score.py  ship.py  team.py
src/kessler_game/graphics/: graphics_handler.py  graphics_plt.py  graphics_tk.py  graphics_ue.py
src/kesslergame/: __init__.py  asteroid.py  asteroid_state.py  bullet.py  bullet_state.py  collisions.py  controller.py  controller_gamepad.py  game_state.py  kessler_game.py  math_utils.py  mine_state.py  mines.py  mypy.ini  scenario.py  score.py  settings_dicts.py  ship.py  ship_state.py  state_dicts.py  state_models.py  team.py
src/kesslergame/explanation/: __init__.py  graphics_tts.py  tts_controller.py  tts_process.py
src/kesslergame/graphics/: __init__.py  graphics_base.py  graphics_handler.py  graphics_plt.py  graphics_tk.py  graphics_ue.py
(+31 files in other folders)
