# -*- coding: utf-8 -*-
# Copyright © 2022 Thales. All Rights Reserved.
# NOTICE: This file is subject to the license agreement defined in file 'LICENSE', which is part of
# this source code package.

# Minimum requirements for the build system to execute.
[build-system]
requires = ["setuptools>=42.0", "wheel", "mypy", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.mypy]
ignore_missing_imports = true
