[metadata]
name = kessler_game
version = attr: kessler_game.__version__
url = https://github.com/xfuzzycomp/FuzzyAsteroids
author = Zachariah Phillips
author_email = zachariah.phillips@us.thalesgroup.com
maintainer = Timothy Arnett
maintainer_email = tim.arnett@psibernetix.com
description = Asteroid Game simulation environment for ML and AI applications
long_description = file: README.md
keywords = artificial intelligence, asteroids, machine learning
license = Apache 2.0 License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
zip_safe = True
package_dir=
    =src
packages = find:
python_requires = >=3.10

[options.packages.find]
where=src
