# -*- coding: utf-8 -*-
# Copyright © 2022 Thales. All Rights Reserved.
# NOTICE: This file is subject to the license agreement defined in file 'LICENSE', which is part of
# this source code package.

[metadata]
name = kesslergame
version = attr: kesslergame.__version__
url = https://github.com/ThalesGroup/kessler-game
author = Zachariah Phillips
author_email = zachariah.phillips@us.thalesgroup.com
maintainer = Timothy Arnett
maintainer_email = tim.arnett@psibernetix.com
description = Asteroids game simulation environment for ML and AI applications
long_description = file: README.md
keywords = artificial intelligence, asteroids, machine learning
license = Apache 2.0 License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
zip_safe = True
package_dir=
    = src
packages = find:
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where=src
